--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
       "react/jsx-one-expression-per-line": "off",
       "camelcase": "off",
       "no-use-before-define": "off",
+      "react/jsx-props-no-spreading": "off",
+      "react/prop-types": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
